// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot passwordless default 1`] = `
.c1 {
  text-align: center;
  margin-bottom: 10px;
  color: #495057;
}

.c0 {
  font-size: 14px;
  -webkit-transition: -webkit-transform 400ms ease, opacity 400ms ease;
  -webkit-transition: transform 400ms ease, opacity 400ms ease;
  transition: transform 400ms ease, opacity 400ms ease;
  opacity: 0;
  padding: 20px;
  border-radius: 3px;
  background-color: #ffffff;
  max-width: 400px;
  box-sizing: border-box;
  margin: 0 auto;
}

.c6 {
  display: block;
  width: 100%;
  box-sizing: border-box;
  text-align: center;
  font-weight: bold;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  cursor: pointer;
  color: #ffffff;
  background-color: #229955;
  border: 1px solid #229955;
  padding: 9px 12px;
  font-size: 14px;
  line-height: 1.428571429;
  border-radius: 3px;
  -webkit-transition: all .15s ease-in-out;
  transition: all .15s ease-in-out;
}

.c6:focus {
  outline: 0;
  box-shadow: 0 0 0 3px rgba(34,153,85,0.5);
}

.c6:hover,
.c6:active {
  background-color: #1b7842;
  border-color: #1b7842;
}

.c6[disabled] {
  opacity: .65;
}

.c2 {
  position: relative;
}

.c4 {
  color: #495057;
  margin-bottom: 5px;
  display: none;
}

.c3 {
  margin-bottom: 10px;
}

.c3 > label::after {
  content: "\\A0*";
  color: #dc4e41;
}

.c5 {
  display: block;
  width: 100%;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.428571429;
  color: #495057;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #ced4da;
  background-color: #fff;
  background-image: none;
  padding: 9px 12px;
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:focus {
  border-color: #5fdb94;
  box-shadow: 0 0 0 3px rgba(95,219,148,0.5);
  outline: 0;
}

.c5:disabled,
.c5[readonly] {
  background-color: #e9ecef;
}

.c5::-webkit-input-placeholder {
  color: #868e96;
}

.c5::-moz-placeholder {
  color: #868e96;
}

.c5:-ms-input-placeholder {
  color: #868e96;
}

.c5::placeholder {
  color: #868e96;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1"
      >
        passwordless.intro
      </div>
      <form
        class="c2"
        novalidate=""
      >
        <div
          class="c3"
          required=""
        >
          <label
            class="c4"
            for="email"
          >
            email
          </label>
          <input
            class="c5"
            data-testid="email"
            id="email"
            name="email"
            placeholder="email"
            required=""
            title="email"
            type="email"
            value=""
          />
        </div>
        <button
          class="c6"
          data-testid="submit"
          type="submit"
        >
          send
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Snapshot passwordless no intro 1`] = `
.c0 {
  font-size: 14px;
  -webkit-transition: -webkit-transform 400ms ease, opacity 400ms ease;
  -webkit-transition: transform 400ms ease, opacity 400ms ease;
  transition: transform 400ms ease, opacity 400ms ease;
  opacity: 0;
  padding: 20px;
  border-radius: 3px;
  background-color: #ffffff;
  max-width: 400px;
  box-sizing: border-box;
  margin: 0 auto;
}

.c5 {
  display: block;
  width: 100%;
  box-sizing: border-box;
  text-align: center;
  font-weight: bold;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  cursor: pointer;
  color: #ffffff;
  background-color: #229955;
  border: 1px solid #229955;
  padding: 9px 12px;
  font-size: 14px;
  line-height: 1.428571429;
  border-radius: 3px;
  -webkit-transition: all .15s ease-in-out;
  transition: all .15s ease-in-out;
}

.c5:focus {
  outline: 0;
  box-shadow: 0 0 0 3px rgba(34,153,85,0.5);
}

.c5:hover,
.c5:active {
  background-color: #1b7842;
  border-color: #1b7842;
}

.c5[disabled] {
  opacity: .65;
}

.c1 {
  position: relative;
}

.c3 {
  color: #495057;
  margin-bottom: 5px;
  display: none;
}

.c2 {
  margin-bottom: 10px;
}

.c2 > label::after {
  content: "\\A0*";
  color: #dc4e41;
}

.c4 {
  display: block;
  width: 100%;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.428571429;
  color: #495057;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #ced4da;
  background-color: #fff;
  background-image: none;
  padding: 9px 12px;
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:focus {
  border-color: #5fdb94;
  box-shadow: 0 0 0 3px rgba(95,219,148,0.5);
  outline: 0;
}

.c4:disabled,
.c4[readonly] {
  background-color: #e9ecef;
}

.c4::-webkit-input-placeholder {
  color: #868e96;
}

.c4::-moz-placeholder {
  color: #868e96;
}

.c4:-ms-input-placeholder {
  color: #868e96;
}

.c4::placeholder {
  color: #868e96;
}

<div>
  <div
    class="c0"
  >
    <div>
      <form
        class="c1"
        novalidate=""
      >
        <div
          class="c2"
          required=""
        >
          <label
            class="c3"
            for="email"
          >
            email
          </label>
          <input
            class="c4"
            data-testid="email"
            id="email"
            name="email"
            placeholder="email"
            required=""
            title="email"
            type="email"
            value=""
          />
        </div>
        <button
          class="c5"
          data-testid="submit"
          type="submit"
        >
          send
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Snapshot passwordless sms 1`] = `
.c1 {
  text-align: center;
  margin-bottom: 10px;
  color: #495057;
}

.c0 {
  font-size: 14px;
  -webkit-transition: -webkit-transform 400ms ease, opacity 400ms ease;
  -webkit-transition: transform 400ms ease, opacity 400ms ease;
  transition: transform 400ms ease, opacity 400ms ease;
  opacity: 0;
  padding: 20px;
  border-radius: 3px;
  background-color: #ffffff;
  max-width: 400px;
  box-sizing: border-box;
  margin: 0 auto;
}

.c6 {
  display: block;
  width: 100%;
  box-sizing: border-box;
  text-align: center;
  font-weight: bold;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  cursor: pointer;
  color: #ffffff;
  background-color: #229955;
  border: 1px solid #229955;
  padding: 9px 12px;
  font-size: 14px;
  line-height: 1.428571429;
  border-radius: 3px;
  -webkit-transition: all .15s ease-in-out;
  transition: all .15s ease-in-out;
}

.c6:focus {
  outline: 0;
  box-shadow: 0 0 0 3px rgba(34,153,85,0.5);
}

.c6:hover,
.c6:active {
  background-color: #1b7842;
  border-color: #1b7842;
}

.c6[disabled] {
  opacity: .65;
}

.c2 {
  position: relative;
}

.c4 {
  color: #495057;
  margin-bottom: 5px;
  display: none;
}

.c3 {
  margin-bottom: 10px;
}

.c5 {
  display: block;
  width: 100%;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.428571429;
  color: #495057;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #ced4da;
  background-color: #fff;
  background-image: none;
  padding: 9px 12px;
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:focus {
  border-color: #5fdb94;
  box-shadow: 0 0 0 3px rgba(95,219,148,0.5);
  outline: 0;
}

.c5:disabled,
.c5[readonly] {
  background-color: #e9ecef;
}

.c5::-webkit-input-placeholder {
  color: #868e96;
}

.c5::-moz-placeholder {
  color: #868e96;
}

.c5:-ms-input-placeholder {
  color: #868e96;
}

.c5::placeholder {
  color: #868e96;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1"
      >
        passwordless.sms.intro
      </div>
      <form
        class="c2"
        novalidate=""
      >
        <div
          class="c3"
        >
          <label
            class="c4"
            for="phone_number"
          >
            phoneNumber
          </label>
          <input
            autocomplete="tel"
            class="c5"
            data-testid="phone_number"
            id="phone_number"
            name="phone_number"
            placeholder="phoneNumber"
            required=""
            type="tel"
            value=""
          />
        </div>
        <button
          class="c6"
          data-testid="submit"
          type="submit"
        >
          send
        </button>
      </form>
    </div>
  </div>
</div>
`;
